# TaxCompute

./: .gitignore  CMakeLists.txt  main.cpp  salaries.txt
